<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">
	<group>
		<item
			android:id="@+id/action_close_connection"
			android:orderInCategory="100"
			android:title="@string/menu_close_connection"
			app:showAsAction="never"/>
		<item
			android:id="@+id/action_save_as_preset"
			android:orderInCategory="100"
			android:title="@string/menu_save_as_preset"
			app:showAsAction="never"/>
		<item
			android:id="@+id/action_connection_info"
			android:orderInCategory="100"
			android:title="@string/menu_information"
			app:showAsAction="never"/>
		<item
			android:id="@+id/action_reconnect"
			android:orderInCategory="100"
			android:title="@string/menu_reconnect"
			app:showAsAction="never"/>
	</group>
	<group>
		<item
			android:id="@+id/action_save_results"
			android:orderInCategory="100"
			android:title="@string/menu_save_result"
			app:showAsAction="never"/>
		<item
			android:id="@+id/action_view_results"
			android:orderInCategory="100"
			android:title="@string/menu_view_result"
			app:showAsAction="never"/>
	</group>
</menu>
