<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	style="@style/OperationDialog"
	android:id="@+id/dialog_insert"
	tools:context="richard.rmysql.MainActivity">
	<TextView
		style="@style/DialogText"
		android:text="@string/dialog_insert_insert_into"/>
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
		<EditText
			android:layout_weight="1.0"
			android:layout_width="0dp"
			style="@style/DialogText"
			android:id="@+id/dialog_insert_table_name"
			android:hint="@string/dialog_insert_table_name"/>
		<Button
			style="@style/ChoiceButton"
			android:id="@+id/dialog_insert_choice_table"/>
	</LinearLayout>
	<TextView
		style="@style/DialogText"
		android:text="@string/dialog_insert_for_fields"/>
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
		<EditText
			android:layout_weight="1.0"
			android:layout_width="0dp"
			style="@style/DialogText"
			android:id="@+id/dialog_insert_fields"
			android:hint="@string/dialog_insert_fields_example"/>
		<Button
			style="@style/AddChoiceButton"
			android:id="@+id/dialog_insert_choice_fields"/>
	</LinearLayout>
	<TextView
		style="@style/DialogText"
		android:text="@string/dialog_insert_with_values"/>
	<EditText
		style="@style/DialogText"
		android:id="@+id/dialog_insert_values"
		android:hint="@string/dialog_insert_values_example"/>
</LinearLayout>
