<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/dialog_alter"
	style="@style/OperationDialog"
	tools:ignore="NestedWeights"
	tools:context="richard.rmysql.MainActivity">
	<TextView
		style="@style/DialogText"
		android:text="@string/dialog_alter_alter"/>
	<LinearLayout
		style="@style/DialogText"
		android:orientation="horizontal">
		<EditText
			android:layout_weight="1.0"
			style="@style/DialogText"
			android:layout_width="0dp"
			android:id="@+id/dialog_alter_table_name"
			android:hint="@string/dialog_alter_table_name"/>
		<Button
			style="@style/ChoiceButton"
			android:id="@+id/dialog_alter_choice_table"/>
		<Button
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="0.3"
			android:text="@string/dialog_alter_load"
			android:id="@+id/dialog_alter_load"/>
	</LinearLayout>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">
		<TextView
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1.0"
			android:text="@string/dialog_alter_field_list"/>
		<ImageButton
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/dialog_alter_add"
			android:contentDescription="@string/dialog_alter_add"
			android:background="@drawable/ic_add"/>
	</LinearLayout>
	<LinearLayout
		android:id="@+id/dialog_alter_field_list"
		style="@style/DialogText"
		android:orientation="vertical">
		<TextView
			style="@style/DialogText"
			android:textAlignment="center"
			android:text="@string/dialog_alter_empty_message"/>
	</LinearLayout>
</LinearLayout>
