<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/dialog_create_connection"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:paddingTop="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:orientation="vertical"
	tools:context="richard.rmysql.MainActivity"
	tools:showIn="@layout/app_bar_main">
	<android.support.design.widget.TextInputLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
		<android.support.design.widget.TextInputEditText
			style="@style/DialogText"
			android:id="@+id/dialog_create_address"
			android:hint="@string/dialog_create_address"/>
	</android.support.design.widget.TextInputLayout>
	<android.support.design.widget.TextInputLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
		<android.support.design.widget.TextInputEditText
			style="@style/DialogText"
			android:id="@+id/dialog_create_username"
			android:hint="@string/dialog_create_username"/>
	</android.support.design.widget.TextInputLayout>
	<android.support.design.widget.TextInputLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
		<android.support.design.widget.TextInputEditText
			style="@style/DialogText"
			android:inputType="textPassword"
			android:id="@+id/dialog_create_password"
			android:hint="@string/dialog_create_password"/>
	</android.support.design.widget.TextInputLayout>
	<android.support.design.widget.TextInputLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
		<android.support.design.widget.TextInputEditText
			style="@style/DialogText"
			android:id="@+id/dialog_create_schema"
			android:hint="@string/dialog_create_schema"/>
	</android.support.design.widget.TextInputLayout>
	<CheckBox
		style="@style/DialogText"
		android:id="@+id/dialog_create_use_ssh"
		android:text="@string/dialog_create_use_ssh"/>
	<android.support.design.widget.TextInputLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
		<android.support.design.widget.TextInputEditText
			style="@style/DialogText"
			android:id="@+id/dialog_create_ssh_address"
			android:hint="@string/dialog_create_ssh_address"/>
	</android.support.design.widget.TextInputLayout>
	<android.support.design.widget.TextInputLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
		<android.support.design.widget.TextInputEditText
			style="@style/DialogText"
			android:id="@+id/dialog_create_ssh_username"
			android:hint="@string/dialog_create_ssh_username"/>
	</android.support.design.widget.TextInputLayout>
	<android.support.design.widget.TextInputLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
		<android.support.design.widget.TextInputEditText
			style="@style/DialogText"
			android:inputType="textPassword"
			android:id="@+id/dialog_create_ssh_password"
			android:hint="@string/dialog_create_ssh_password"/>
	</android.support.design.widget.TextInputLayout>
</LinearLayout>
