<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
			xmlns:tools="http://schemas.android.com/tools"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			tools:context="richard.rmysql.MainActivity"
			tools:showIn="@layout/app_bar_main">
	<LinearLayout
		android:id="@+id/content_connection_page"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingBottom="@dimen/activity_vertical_margin"
		android:paddingLeft="@dimen/activity_horizontal_margin"
		android:paddingRight="@dimen/activity_horizontal_margin"
		android:paddingTop="@dimen/activity_vertical_margin"
		android:orientation="vertical">
		<TextView
			style="@style/StubTitle"
			android:id="@+id/connection_title"
			android:text="@string/nav_connection_untitled"/>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">
			<Button
				style="@style/ConnectionButton"
				android:id="@+id/connection_select"
				android:text="@string/connection_select"/>
			<Button
				style="@style/ConnectionButton"
				android:id="@+id/connection_update"
				android:text="@string/connection_update"/>
		</LinearLayout>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">
			<Button
				style="@style/ConnectionButton"
				android:id="@+id/connection_insert"
				android:text="@string/connection_insert"/>
			<Button
				style="@style/ConnectionButton"
				android:id="@+id/connection_remove"
				android:text="@string/connection_remove"/>
		</LinearLayout>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">
			<Button
				style="@style/ConnectionButton"
				android:id="@+id/connection_drop"
				android:text="@string/connection_drop"/>
			<Button
				style="@style/ConnectionButton"
				android:id="@+id/connection_alter"
				android:text="@string/connection_alter"/>
		</LinearLayout>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">
			<Button
				style="@style/ConnectionButton"
				android:id="@+id/connection_execute"
				android:text="@string/connection_execute"/>
			<Button
				style="@style/ConnectionButton"
				android:id="@+id/connection_modify"
				android:text="@string/connection_modify"/>
		</LinearLayout>
		<ListView
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:id="@+id/connection_result_list"
			android:layout_weight="1.0">
		</ListView>
	</LinearLayout>
</ScrollView>