<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

	<group android:checkableBehavior="single"
		android:id="@+id/nav_group">
		<item
			android:id="@+id/nav_home"
			android:icon="@drawable/ic_nav_home"
			android:orderInCategory="0"
			android:title="@string/nav_home"/>
		<item
			android:id="@+id/nav_settings"
			android:icon="@drawable/ic_nav_settings"
			android:orderInCategory="101"
			android:title="@string/nav_settings"/>
		<item
			android:id="@+id/nav_about"
			android:icon="@drawable/ic_nav_about"
			android:orderInCategory="102"
			android:title="@string/nav_about"/>
	</group>
	<!--
		<item
			android:id="@+id/nav_camera"
			android:icon="@drawable/ic_menu_camera"
			android:title="Import"/>
		<item
			android:id="@+id/nav_gallery"
			android:icon="@drawable/ic_menu_gallery"
			android:title="Gallery"/>
		<item
			android:id="@+id/nav_slideshow"
			android:icon="@drawable/ic_menu_slideshow"
			android:title="Slideshow"/>
		<item
			android:id="@+id/nav_manage"
			android:icon="@drawable/ic_menu_manage"
			android:title="Tools"/>
	</group>

	<item android:title="Communicate">
		<menu>
			<item
				android:id="@+id/nav_share"
				android:icon="@drawable/ic_menu_share"
				android:title="Share"/>
			<item
				android:id="@+id/nav_send"
				android:icon="@drawable/ic_menu_send"
				android:title="Send"/>
		</menu>
	</item>-->

</menu>
